WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135684
[iOS WK2] www.france24.com doesn't always load the page, sections stay white
https://bugs.webkit.org/show_bug.cgi?id=135684
Summary
[iOS WK2] www.france24.com doesn't always load the page, sections stay white
Simon Fraser (smfr)
Reported
2014-08-06 19:35:59 PDT
[iOS WK2] www.france24.com doesn't always load the page, sections stay white
Attachments
Patch
(2.17 KB, patch)
2014-08-06 19:37 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-08-06 19:37:43 PDT
Created
attachment 236167
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-08-06 19:38:31 PDT
<
rdar://problem/17931712
>
Simon Fraser (smfr)
Comment 3
2014-08-06 19:44:19 PDT
https://trac.webkit.org/r172199
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug